[package]
name = "slicejson"
version = "0.1.2"
edition = "2021"
description = "parse json through string slice,try to make it faster!"
license = "MIT OR Apache-2.0"
keywords = ["json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.58"
simd-json = "0.13.6"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
regex = "=1.10.2"
